added api method /api/v1/merchant_methods
