# ppay_app/config/routes.rb
@@ -211,11 +211,11 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      post '/merchant_methods', to: 'merchant_methods#index'
       post '/catcher/ping', to: 'mobile_app_requests#ping', as: :catcher_ping
       post '/simbank/requests', to: 'incoming_requests#create', as: :simbank_request
       get :balance, to: 'balance#show'
       resources :payments, param: :uuid, only: :show
+      resources :merchant_methods, only: :index
 
       post '/check_telegram_connections/check_connection_status',
            to: 'check_telegram_connections#check_connection_status'
